<?xml version="1.0"?>
<package format="3">
  <name>mobile_system_control_vis</name>
  <version>0.0.0</version>
  <description>The mobile_system_control_vis package</description>
  <maintainer email="kyuhun@todo.todo">kyuhun</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>